Alignment and style fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,15 @@
 @tailwind utilities;
 
 h1 {
-    @apply font-extralight text-5xl text-gray-600;
+    @apply font-thin text-5xl text-gray-600;
 }
 
 h2,
 li {
-    @apply font-light text-2xl;
+    @apply font-extralight text-2xl;
+}
+h3 {
+    @apply font-extralight text-xl;
 }
 
 p,
